fix squishy button
it was turning blue when it was clicked

--- a/website/static/main.css
+++ b/website/static/main.css
@@ -37,7 +37,7 @@ textarea {
   width: 100px;
 }
 
-.btn:hover{
+/* .btn:hover{
   background-color: #cbf5dd;
   color: #505050;
   transform: translateY(4px);
@@ -78,10 +78,149 @@ textarea {
     0 6px 0 0 #dcdcdc,
     0 7px 0 0 #cacaca,
     0 7px 8px 0 #cecece;
+} */
+
+/* .btn-primary {
+  color: #242424 !important;
+  background-color: #cbf5dd !important;
+  border-color: #cbf5dd !important;
+  box-shadow: 
+  inset 0 1px 0 0 #f4f4f4,
+  0 1px 0 0 #efefef,
+  0 2px 0 0 #ececec,
+  0 4px 0 0 #e0e0e0,
+  0 5px 0 0 #dedede,
+  0 6px 0 0 #dcdcdc,
+  0 7px 0 0 #cacaca,
+  0 7px 8px 0 #cecece !important;
 }
 
-button:focus,
-button:active {
-  outline: none;
-  box-shadow: none;
+.btn-primary:focus,
+.btn-primary:active {
+  color: #242424 !important;
+  background-color: #cbf5dd !important;
+  border-color: #cbf5dd !important;
+  outline: none !important;
+  box-shadow: 
+    inset 0 1px 0 0 #d9f9e7,
+    0 1px 0 0 #cbf5dd,
+    0 2px 0 0 #baeacb,
+    0 2px 0 0 #aadfbd,
+    0 3px 0 0 #9ed7b1,
+    0 4px 0 0 #92cfa5,
+    0 4px 6px 0 #86c79a !important;
+  transform: translateY(4px);
+} */
+
+/* .btn {
+  background-color: #cbf5dd !important;
+  color: #242424 !important;
+  border-color: #cbf5dd !important;
+  position: relative;
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+  font-weight: 600;
+  border: none;
+  cursor: pointer;
+  transition: all 250ms;
+  display: inline-flex;
+  align-items: center;
+  gap: 0.5rem;
+  border-radius: 0.5rem;
+  box-shadow: 
+    inset 0 1px 0 0 #d9f9e7,
+    0 1px 0 0 #cbf5dd,
+    0 2px 0 0 #baeacb,
+    0 4px 0 0 #aadfbd,
+    0 5px 0 0 #9ed7b1,
+    0 6px 0 0 #92cfa5,
+    0 7px 0 0 #86c79a,
+    0 7px 8px 0 #79bf8e !important;
+  text-decoration: none !important;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.btn:hover,
+.btn:focus,
+.btn:active {
+  background-color: #cbf5dd !important;
+  color: #505050 !important;
+  border-color: #cbf5dd !important;
+  outline: none !important;
+  transform: translateY(4px);
+  box-shadow: 
+    inset 0 1px 0 0 #d9f9e7,
+    0 1px 0 0 #cbf5dd,
+    0 1px 0 0 #baeacb,
+    0 2px 0 0 #aadfbd,
+    0 2px 0 0 #9ed7b1,
+    0 3px 0 0 #92cfa5,
+    0 4px 0 0 #86c79a,
+    0 4px 6px 0 #79bf8e !important;
+}
+
+.btn:visited {
+  color: #242424 !important;
+  background-color: #cbf5dd !important;
+  border-color: #cbf5dd !important;
+} */
+
+.btn {
+  background-color: #f0f0f0 !important;
+  border: none;
+  color: #242424 !important;
+  position: relative;
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 250ms;
+  display: inline-flex;
+  align-items: center;
+  gap: 0.5rem;
+  border-radius: 0.5rem;
+  text-decoration: none !important;
+  -webkit-tap-highlight-color: transparent;
+
+  box-shadow:
+    inset 0 1px 0 0 #f4f4f4,
+    0 1px 0 0 #efefef,
+    0 2px 0 0 #ececec,
+    0 4px 0 0 #e0e0e0,
+    0 5px 0 0 #dedede,
+    0 6px 0 0 #dcdcdc,
+    0 7px 0 0 #cacaca,
+    0 7px 8px 0 #cecece;
+}
+
+.btn:hover {
+  background-color: #cbf5dd !important;
+  color: #505050 !important;
+  transform: translateY(4px);
+  box-shadow:
+    inset 0 1px 0 0 #d9f9e7,
+    0 1px 0 0 #cbf5dd,
+    0 1px 0 0 #baeacb,
+    0 2px 0 0 #aadfbd,
+    0 2px 0 0 #9ed7b1,
+    0 3px 0 0 #92cfa5,
+    0 4px 0 0 #86c79a,
+    0 4px 6px 0 #79bf8e;
+}
+
+.btn:focus,
+.btn:active,
+.btn:visited {
+  background-color: #f0f0f0 !important;
+  color: #242424 !important;
+  outline: none !important;
+  box-shadow:
+    inset 0 1px 0 0 #f4f4f4,
+    0 1px 0 0 #efefef,
+    0 2px 0 0 #ececec,
+    0 4px 0 0 #e0e0e0,
+    0 5px 0 0 #dedede,
+    0 6px 0 0 #dcdcdc,
+    0 7px 0 0 #cacaca,
+    0 7px 8px 0 #cecece !important;
 }
